--- a/src/assets/bottom_bar.css
+++ b/src/assets/bottom_bar.css
@@ -1,9 +1,15 @@
 .bottom-bar {
-  width: 100%;
-  height: 8vh;
-  background-color: var(--background-color);
-  position: absolute;
-  top: 92vh;
-  z-index: 2;
-  position: fixed;
+  display: none;
+}
+
+@media(max-width: 420px) {
+  .bottom-bar {
+    display: flex;
+    width: 100%;
+    height: 4.6vh;
+    background-color: rgb(236, 236, 235);
+    bottom: 0;
+    z-index: 800;
+    position: fixed;
+  }
 }
