--- a/src/assets/bottom_bar.css
+++ b/src/assets/bottom_bar.css
@@ -6,10 +6,12 @@
   .bottom-bar {
     display: flex;
     width: 100%;
-    height: 6vh;
+    height: 7vh;
     background-color: rgb(236, 236, 235);
     bottom: 0;
     z-index: 801;
     position: fixed;
+    padding: 0;
+    margin: 0;
   }
 }
