--- a/src/assets/bottom_bar.css
+++ b/src/assets/bottom_bar.css
@@ -8,7 +8,7 @@
     width: 100%;
     height: 7vh;
     background-color: rgb(236, 236, 235);
-    bottom: 0;
+    top: 93vh;
     z-index: 801;
     position: fixed;
     padding: 0;
