--- a/src/assets/navbar.css
+++ b/src/assets/navbar.css
@@ -61,7 +61,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-color: rgba(0, 0, 0, 0.2); /* Assombrit le contenu en dessous */
   opacity: 0;
   visibility: hidden;
