--- a/src/assets/navbar.css
+++ b/src/assets/navbar.css
@@ -1,3 +1,5 @@
+/* For screen size */
+
 .topnav {
   width: 100%;
   height: 8vh;
@@ -36,24 +38,53 @@
   color: #000000;
 }
 
-.hamburger {
-  display: none;
+/* For 420px max width */
+
+.navline {
+  background-color: var(--background-color);
+  width: 100%;
+  padding-left: 10%;
+  padding-right: 10%;
+  height: 8vh;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: fixed;
+  z-index: 800;
+  background-color: rgb(236, 236, 235);
 }
 
 .hamburger-icon {
   z-index: 802;
 }
 
-.dropdown-menu {
-  display: none;
+.navline a {
+  text-decoration: none;
+  margin: 0;
+  padding: 0;
+  font-family: 'Yeseva One', serif;
+  color: var(--font-color);
+  font-size: 5vw;
+  height: 100%;
 }
 
-.open {
-  display: none;
+.navline p {
+  margin: 0;
+  padding: 0;
+  line-height: 0;
 }
 
-.navline {
-  display: none;
+.name-entete {
+  display: flex;
+  align-items: center;
+  gap: 4%;
+  /* background-color: rebeccapurple; */
+}
+
+.name-separation {
+  height: 0.5px;
+  background-color: black;
+  width: 50px;
 }
 
 .overlay {
@@ -68,6 +99,36 @@
   transition: opacity 0.4s ease-in-out, visibility 0.4s ease-in-out;
 }
 
+.dropdown-menu {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  background-color: rgb(236, 236, 235);
+  opacity: 1;
+  position: absolute;
+  padding: 0;
+  border: 0;
+  border-radius: 0;
+  height: 0;
+  width: 100%;
+  transition: all .4s ease-in-out;
+  top: 0;
+  margin-top: 8vh;
+}
+
+.open {
+  opacity: 1;
+  height: 35vh;
+}
+
+.overlay-show {
+  display: block;
+  visibility: visible;
+  opacity: 1;
+}
+
 @media (max-width: 420px) {
   .topnav {
     height: auto;
@@ -79,49 +140,6 @@
     background-color: none;
   }
 
-  .navline {
-    background-color: var(--background-color);
-    width: 100%;
-    padding-left: 10%;
-    padding-right: 10%;
-    height: 8vh;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    position: fixed;
-    z-index: 800;
-    background-color: rgb(236, 236, 235);
-  }
-
-  .name-entete {
-    display: flex;
-    align-items: center;
-    gap: 4%;
-    /* background-color: rebeccapurple; */
-  }
-
-  .name-separation {
-    height: 0.5px;
-    background-color: black;
-    width: 50px;
-  }
-
-  .navline a {
-    text-decoration: none;
-    margin: 0;
-    padding: 0;
-    font-family: 'Yeseva One', serif;
-    color: var(--font-color);
-    font-size: 5vw;
-    height: 100%;
-  }
-
-  .navline p {
-    margin: 0;
-    padding: 0;
-    line-height: 0;
-  }
-
   .button-link {
     border-top: 0.5px black solid;
     font-size: 0vw;
@@ -129,12 +147,8 @@
     opacity: 0;
   }
 
-  .button-link:hover {
-    transform: scale(1);
-  }
-
   .show {
-    width: 80%;
+    width: 100%;
     font-size: 4vw;
     opacity: 1;
     transition: .2s ease-in-out;
@@ -142,37 +156,8 @@
     z-index: 799;
   }
 
-  .dropdown-menu {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-    align-items: center;
-    background-color: rgb(236, 236, 235);
-    opacity: 1;
-    position: absolute;
-    padding: 0;
-    border: 0;
-    border-radius: 0;
-    height: 0;
-    width: 100%;
-    transition: all .4s ease-in-out;
-    top: 0;
-    margin-top: 8vh;
-  }
-
-  .open {
-    opacity: 1;
-    height: 35vh;
-  }
-
-  .overlay-show {
-    display: block;
-    visibility: visible;
-    opacity: 1;
-  }
-
-  .screen {
-    display: none;
+  .button-link:hover {
+    transform: scale(1);
+    color: var(--font-color);
   }
 }
