--- a/src/assets/general_disposition.css
+++ b/src/assets/general_disposition.css
@@ -8,8 +8,8 @@
 @media (max-width: 420px) {
   .general-disposition {
     width: auto;
+    height: 100vh;
     margin-left: 4.6vh;
     margin-right: 4.6vh;
-    /* background-color: red; */
   }
 }
