--- a/src/assets/button.css
+++ b/src/assets/button.css
@@ -1,11 +1,11 @@
 
 .button-52 {
-  font-size: 1.2vw;
+  /* font-size: 1.2vw; */
   font-weight: 200;
   letter-spacing: 1px;
   padding: 13px 20px 13px;
   outline: 0;
-  border: 1px solid black;
+  border: 0.5px solid black;
   cursor: pointer;
   position: relative;
   background-color: rgba(0, 0, 0, 0);
