--- a/src/assets/home.css
+++ b/src/assets/home.css
@@ -161,12 +161,12 @@
 
 .home-phone-top {
   /* background-color: red; */
-  height: 33%;
+  height: 29%;
   overflow-x: hidden;
   overflow-y: hidden;
   display: flex;
   flex-direction: column;
-  gap: 6%;
+  justify-content: space-between;
 }
 
 .home-phone-top p {
@@ -199,11 +199,19 @@
 
 /* Middle */
 .home-phone-middle {
-  /* background-color: bisque; */
-  height: 33%;
+  height: 25%;
+  font-size: 4vw;
+  font-family: 'Yeseva One', serif;
+  color: var(--font-color);
+  /* background-color: turquoise; */
+  display: flex;
+  justify-content: center;
+  align-items: center;margin: 0;
 }
+
+
 
 .home-phone-bottom {
   /* background-color: aqua; */
-  height: 33%;
+  height: 46%;
 }
