--- a/src/assets/home.css
+++ b/src/assets/home.css
@@ -51,7 +51,6 @@
   align-items: center;
   opacity: 1;
   transition: opacity .2s ease-in-out;
-  /* background-color: aliceblue; */
 
 }
 
@@ -71,7 +70,6 @@
   left: 25%;
   transition: transform .2s ease-in-out;
   border: 0.5px black solid;
-  /* z-index: -1; */
 }
 
 .blue-square a {
@@ -85,12 +83,6 @@
   align-items: center;
   opacity: 1;
   transition: opacity .2s ease-in-out;
-  /* background-color: aliceblue; */
-
-}
-
-.blue-square a:hover {
-  /* opacity: 1; */
 }
 
 .blue-square:hover {
@@ -199,19 +191,68 @@
 
 /* Middle */
 .home-phone-middle {
-  height: 25%;
+  height: 32%;
   font-size: 4vw;
   font-family: 'Yeseva One', serif;
   color: var(--font-color);
-  /* background-color: turquoise; */
   display: flex;
   justify-content: center;
   align-items: center;margin: 0;
 }
 
-
+/* Bottom part */
 
 .home-phone-bottom {
-  /* background-color: aqua; */
-  height: 46%;
+  height: 40%;
+  display: flex;
+  position: relative;
+}
+
+.red-square-phone {
+  background-color: rgba(255, 101, 101, 0.246);
+  position: absolute;
+  display: flex;
+  height: 11vh;
+  width: 25vw;
+  transition: transform .2s ease-in-out;
+  border: 0.5px black solid;
+  left: 0%;
+}
+
+.red-square-phone a {
+  text-decoration: none; font-family: 'Yeseva One', serif ;
+  color: var(--font-color);
+  font-size: 4vw;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 1;
+  transition: opacity .2s ease-in-out;
+}
+
+.blue-square-phone {
+  background-color: rgba(109, 180, 255, 0.292);
+  display: flex;
+  position: absolute;
+  height: 11vh;
+  width: 25vw;
+  left: 63%;
+  transition: transform .2s ease-in-out;
+  border: 0.5px black solid;
+}
+
+.blue-square-phone a {
+  text-decoration: none;
+  font-family: 'Yeseva One', serif ;
+  color: var(--font-color);
+  font-size: 4vw;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 1;
+  transition: opacity .2s ease-in-out;
 }
