--- a/src/assets/home.css
+++ b/src/assets/home.css
@@ -140,7 +140,6 @@
 
 /* Top */
 .home-phone {
-  /* background-color: rebeccapurple; */
   height: 100vh;
   width: 100%;
   display: flex;
@@ -152,7 +151,6 @@
 }
 
 .home-phone-top {
-  /* background-color: red; */
   height: 29%;
   overflow-x: hidden;
   overflow-y: hidden;
@@ -191,8 +189,8 @@
 
 /* Middle */
 .home-phone-middle {
-  height: 32%;
-  font-size: 4vw;
+  height: 33%;
+  font-size: 5vw;
   font-family: 'Yeseva One', serif;
   color: var(--font-color);
   display: flex;
@@ -204,8 +202,11 @@
 
 .home-phone-bottom {
   display: flex;
+  justify-content: center;
+  align-items: center;
   position: relative;
-  /* background-color: aqua; */
+  /* background-color: rebeccapurple; */
+  height: 31vh;
 }
 
 .red-square-phone {
