--- a/src/assets/home.css
+++ b/src/assets/home.css
@@ -144,12 +144,13 @@
 
 /* Top */
 .home-phone {
-  height: 100vh;
-  width: 100%;
+  height: 90vh;
   display: flex;
+  justify-content: space-between;
   flex-direction: column;
+  /* background-color: rebeccapurple; */
   padding-top: 11vh;
-  padding-bottom: 4vh;
+  margin-bottom: 5vh;
   padding-left: 7vw;
   padding-right: 7vw;
 }
@@ -206,10 +207,8 @@
 
 .home-phone-bottom {
   display: flex;
-  justify-content: center;
-  align-items: center;
   position: relative;
-  /* background-color: rebeccapurple; */
+  /* background-color: red; */
   height: 31vh;
 }
 
