--- a/src/assets/home.css
+++ b/src/assets/home.css
@@ -139,7 +139,7 @@
 /* for phones (max width 420px) */
 
 .home-phone-position {
-  position: fixed;
+  /* position: fixed; */
 }
 
 /* Top */
@@ -156,12 +156,13 @@
 }
 
 .home-phone-top {
-  height: 32%;
+  height: 35%;
   overflow-x: hidden;
   overflow-y: hidden;
   display: flex;
   flex-direction: column;
-  gap: 5%;
+  justify-content: space-between;
+  background-color: rebeccapurple;
 }
 
 .home-phone-top p {
