--- a/src/assets/home.css
+++ b/src/assets/home.css
@@ -138,10 +138,6 @@
 
 /* for phones (max width 420px) */
 
-.home-phone-position {
-  /* position: fixed; */
-}
-
 /* Top */
 .home-phone {
   height: 90vh;
@@ -150,7 +146,7 @@
   flex-direction: column;
   /* background-color: rebeccapurple; */
   padding-top: 11vh;
-  margin-bottom: 5vh;
+  padding-bottom: 6vh;
   padding-left: 7vw;
   padding-right: 7vw;
 }
