--- a/src/assets/background_filmdash_button.css
+++ b/src/assets/background_filmdash_button.css
@@ -21,5 +21,12 @@
   transition: 0.2s ease;
   top: 3.5%;
   left: 2.5%;
-  border-radius: 7px;
+}
+
+@media (max-width: 500px) {
+
+  .filmdash-button {
+    width: 100%;
+  }
+
 }
