--- a/src/assets/projects.css
+++ b/src/assets/projects.css
@@ -2,7 +2,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* background-color: rebeccapurple; */
     padding-top: 8vh;
 }
 
@@ -49,7 +48,6 @@
   margin: 0;
   font-size: 4vw;
   color: #ffe372f0;
-  /* color: #ffe3729e; */
   text-transform: uppercase;
   letter-spacing: 0.3em;
   font-family: 'Yeseva One', sans-serif;
@@ -57,4 +55,55 @@
   text-shadow: 2px 4px 10px rgba(0,0,0,0.2);
   transition: 0.2s;
   opacity: 50%;
+}
+
+/* For phones (max 500px) */
+
+@media (max-width: 500px) {
+  .project-disposition {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-top: 11vh;
+    padding-left: 7vw;
+    padding-right: 7vw;
+    /* height: 70vh; */
+    /* background-color: beige; */
+  }
+
+  .project-entete {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 20vh;
+    color: var(--font-color);
+    padding: 0;
+    margin-bottom: 10%;
+    /* background-color: red; */
+  }
+
+  .project-entete h2 {
+    font-size: 10vw;
+    font-family: 'Yeseva One', serif;
+    margin: 0;
+    padding: 0;
+    /* background: blue; */
+  }
+
+  .project-container {
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* background-color: blue; */
+  }
+
+  .filmdash-project h4 {
+    -webkit-text-stroke-width: 0.09px;
+    font-size: 6vw;
+  }
 }
