--- a/src/assets/banner.css
+++ b/src/assets/banner.css
@@ -5,6 +5,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   height: 60vh;
+  width: 100%;
   display: flex;
   flex-direction: column;
   gap: 4%;
