--- a/src/assets/filmdash.css
+++ b/src/assets/filmdash.css
@@ -1,6 +1,7 @@
 .filmdash-container {
   display: flex;
   flex-direction: column;
+  align-items: center;
   position: relative;
   padding-top: 8vh;
 }
@@ -20,7 +21,9 @@
 .gap-section {
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 18vh;
+  width: 71%;
 }
 
 /* ABOUT SECTION */
